issue450/test_cumsum_1d_exclusive_1.mlir.log
within split at ./issue450/test_cumsum_1d_exclusive_1.mlir.decomposed.mlir:1 offset :11:10: error: failed to legalize operation 'torch.aten.cumsum' that was explicitly marked illegal
    %5 = torch.aten.cumsum %arg0, %4, %none : !torch.vtensor<[5],f64>, !torch.int, !torch.none -> !torch.vtensor<[5],f64>
         ^
within split at ./issue450/test_cumsum_1d_exclusive_1.mlir.decomposed.mlir:1 offset :11:10: note: see current operation: %8 = "torch.aten.cumsum"(%arg0, %7, %0) : (!torch.vtensor<[5],f64>, !torch.int, !torch.none) -> !torch.vtensor<[5],f64>
